--- a/css/main-mobile.css
+++ b/css/main-mobile.css
@@ -571,7 +571,7 @@
     left: 0;
   }
 }
-@media (min-width: 760px) and (max-width: 1295px) {
+@media (min-width: 761px) and (max-width: 1295px) {
   .glider-banner .glider .slide .slide-text .title {
     color: #222222;
     font-size: 38px;
@@ -900,7 +900,7 @@
     box-shadow: 0px 8px 0px 0px #d7db2d;
   }
 }
-@media (min-width: 760px) and (max-width: 1295px) {
+@media (min-width: 761px) and (max-width: 1295px) {
   .swiper-cards-dog .swiper {
     width: 100%;
     height: 100vh;
@@ -1761,7 +1761,7 @@ footer .footer .container .column:last-child .soc_media a {
     grid-column: 9/11;
   }
 }
-@media (min-width: 760px) and (max-width: 1295px) {
+@media (min-width: 761px) and (max-width: 1295px) {
   footer .form {
     width: calc(100% - 140px);
     padding: 40px;
@@ -1799,9 +1799,12 @@ footer .footer .container .column:last-child .soc_media a {
   footer .footer .container {
     grid-template-columns: 1fr 1fr;
     padding: 36px 0 84px 30px;
+    position: relative;
   }
   footer .footer .container .column:first-child a.police {
-    display: none;
+    position: absolute;
+    bottom: 20px;
+    left: 51.5%;
   }
   footer .footer .container .column:nth-child(2) {
     grid-column: 2;
@@ -1862,13 +1865,11 @@ footer .footer .container .column:last-child .soc_media a {
   }
   footer .footer .container {
     padding: 36px 0 84px 36px;
-  }
-  footer .footer .container .column:first-child {
     position: relative;
   }
   footer .footer .container .column:first-child a.police {
     position: absolute;
-    top: 480px;
+    bottom: 20px;
   }
   footer .footer .container .column:last-child {
     display: grid;
@@ -1880,6 +1881,9 @@ footer .footer .container .column:last-child .soc_media a {
   }
   footer .footer .container .column:last-child .soc_media {
     grid-row: 1;
+  }
+  footer .footer .container .column.menu {
+    margin: 24px 0;
   }
 }
 input[type=checkbox].yellow-checkbox {
