--- a/css/main.css
+++ b/css/main.css
@@ -514,6 +514,14 @@
     padding-top: 190px;
     padding-bottom: 505px;
   }
+  .content .second_block .description {
+    color: #000;
+    font-family: "Noto Sans";
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    margin-bottom: 44px;
+  }
   .content .thirth_block {
     margin-bottom: 128px;
     padding: 0 30px;
@@ -627,7 +635,7 @@
     left: 0;
   }
 }
-@media (min-width: 760px) and (max-width: 1295px) {
+@media (min-width: 761px) and (max-width: 1295px) {
   .glider-banner .glider .slide .slide-text .title {
     color: #222222;
     font-size: 38px;
@@ -956,7 +964,7 @@
     box-shadow: 0px 8px 0px 0px #d7db2d;
   }
 }
-@media (min-width: 760px) and (max-width: 1295px) {
+@media (min-width: 761px) and (max-width: 1295px) {
   .swiper-cards-dog .swiper {
     width: 100%;
     height: 100vh;
@@ -1855,9 +1863,12 @@ footer .footer .container .column:last-child .soc_media a {
   footer .footer .container {
     grid-template-columns: 1fr 1fr;
     padding: 36px 0 84px 30px;
+    position: relative;
   }
   footer .footer .container .column:first-child a.police {
-    display: none;
+    position: absolute;
+    bottom: 20px;
+    left: 51.5%;
   }
   footer .footer .container .column:nth-child(2) {
     grid-column: 2;
@@ -1918,13 +1929,11 @@ footer .footer .container .column:last-child .soc_media a {
   }
   footer .footer .container {
     padding: 36px 0 84px 36px;
-  }
-  footer .footer .container .column:first-child {
     position: relative;
   }
   footer .footer .container .column:first-child a.police {
     position: absolute;
-    top: 480px;
+    bottom: 20px;
   }
   footer .footer .container .column:last-child {
     display: grid;
@@ -1936,6 +1945,9 @@ footer .footer .container .column:last-child .soc_media a {
   }
   footer .footer .container .column:last-child .soc_media {
     grid-row: 1;
+  }
+  footer .footer .container .column.menu {
+    margin: 24px 0;
   }
 }
 input[type=checkbox].yellow-checkbox {
