--- a/css/main.scss
+++ b/css/main.scss
@@ -382,6 +382,14 @@
     .second_block {
       padding-top: 190px;
       padding-bottom: 505px;
+      .description {
+        color: #000;
+        font-family: "Noto Sans";
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20px;
+        margin-bottom: 44px;
+      }
     }
 
     .thirth_block {
