--- a/css/components/page-cards.scss
+++ b/css/components/page-cards.scss
@@ -1,6 +1,6 @@
 @import "../params";
 
-@media (min-width: ($maxWidth)) {
+@media (min-width: $maxWidth) {
   .swiper-cards-dog {
     .swiper {
       width: 100%;
@@ -156,6 +156,7 @@
     top: 0px;
     border-radius: 24px;
     overflow: hidden;
+
     &:nth-child(2) {
       a.btn-black {
         &:hover {
@@ -805,7 +806,7 @@
     }
     &__inner {
       display: grid;
-      height: 800px;
+      height: 536px;
       border-radius: 24px;
       overflow: hidden;
     }
@@ -816,12 +817,6 @@
         height: 100%;
         object-fit: cover;
       }
-    }
-
-    &__img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
     }
 
     &__content {
