--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -141,7 +141,7 @@
   font-family: Noto Sans;
   font-weight: 500;
   font-style: normal;
-  src: url(./fonts/Noto_Sans/NotoSans-Medium.ttf);
+  src: url(../fonts/Noto_Sans/NotoSans-Medium.ttf);
 }
 @font-face {
   font-family: Noto Sans;
@@ -167,7 +167,7 @@
   font-family: Noto Sans;
   font-weight: 700;
   font-style: normal;
-  src: url(./fonts/Noto_Sans/NotoSans-Bold.ttf);
+  src: url(../fonts/Noto_Sans/NotoSans-Bold.ttf);
 }
 @font-face {
   font-family: Noto Sans;
@@ -180,7 +180,7 @@
   font-family: Noto Sans;
   font-weight: 800;
   font-style: normal;
-  src: url(./fonts/Noto_Sans/NotoSans-ExtraBold.ttf);
+  src: url(../fonts/Noto_Sans/NotoSans-ExtraBold.ttf);
 }
 @font-face {
   font-family: Noto Sans;
