--- a/css/entrepreneurs.css
+++ b/css/entrepreneurs.css
@@ -134,7 +134,7 @@
   font-family: Noto Sans;
   font-weight: 500;
   font-style: normal;
-  src: url(./fonts/Noto_Sans/NotoSans-Medium.ttf);
+  src: url(../fonts/Noto_Sans/NotoSans-Medium.ttf);
 }
 @font-face {
   font-family: Noto Sans;
@@ -158,7 +158,7 @@
   font-family: Noto Sans;
   font-weight: 700;
   font-style: normal;
-  src: url(./fonts/Noto_Sans/NotoSans-Bold.ttf);
+  src: url(../fonts/Noto_Sans/NotoSans-Bold.ttf);
 }
 @font-face {
   font-family: Noto Sans;
@@ -170,7 +170,7 @@
   font-family: Noto Sans;
   font-weight: 800;
   font-style: normal;
-  src: url(./fonts/Noto_Sans/NotoSans-ExtraBold.ttf);
+  src: url(../fonts/Noto_Sans/NotoSans-ExtraBold.ttf);
 }
 @font-face {
   font-family: Noto Sans;
