--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@
   font-family: Noto Sans;
   font-weight: 500;
   font-style: normal;
-  src: url(./fonts/Noto_Sans/NotoSans-Medium.ttf);
+  src: url(../fonts/Noto_Sans/NotoSans-Medium.ttf);
 }
 @font-face {
   font-family: Noto Sans;
@@ -159,7 +159,7 @@
   font-family: Noto Sans;
   font-weight: 700;
   font-style: normal;
-  src: url(./fonts/Noto_Sans/NotoSans-Bold.ttf);
+  src: url(../fonts/Noto_Sans/NotoSans-Bold.ttf);
 }
 @font-face {
   font-family: Noto Sans;
@@ -171,7 +171,7 @@
   font-family: Noto Sans;
   font-weight: 800;
   font-style: normal;
-  src: url(./fonts/Noto_Sans/NotoSans-ExtraBold.ttf);
+  src: url(../fonts/Noto_Sans/NotoSans-ExtraBold.ttf);
 }
 @font-face {
   font-family: Noto Sans;
@@ -1877,12 +1877,6 @@
   .cours-article__image img {
     width: 100%;
     height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .cours-article__img {
-    width: 100%;
-    height: auto;
     -o-object-fit: cover;
        object-fit: cover;
   }
