--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@
   font-family: Mulish;
   font-weight: 800;
   font-style: normal;
-  src: url(./fonts/Mulish/Mulish-ExtraBold.ttf);
+  src: url(../fonts/Mulish/Mulish-ExtraBold.ttf);
 }
 @font-face {
   font-family: Mulish;
