--- a/css/about.css
+++ b/css/about.css
@@ -311,7 +311,6 @@
     -o-object-fit: cover;
     object-fit: cover;
     border-radius: 24px;
-    overflow: visible;
   }
   .trn-about .second-screen {
     position: relative;
@@ -319,7 +318,7 @@
   }
   .trn-about .second-screen::after {
     display: block;
-    content: url("/img/icon/minisnake.svg");
+    content: url("../img/icon/minisnake.svg");
     position: absolute;
     top: 150px;
     left: 80px;
@@ -401,7 +400,7 @@
   }
   .trn-about .third-screen::before {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     top: 0;
     right: 0;
@@ -487,7 +486,7 @@
   }
   .trn-about .fourth-screen::before {
     display: block;
-    content: url("/img/icon/minisnake.svg");
+    content: url("../img/icon/minisnake.svg");
     position: absolute;
     bottom: 90px;
     right: 0;
@@ -495,7 +494,7 @@
   }
   .trn-about .fourth-screen::after {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     bottom: -50px;
     left: -140px;
@@ -669,10 +668,10 @@
   }
   footer .form::after {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     top: -160px;
-    right: -64px;
+    right: 0;
     transform: rotate(-87deg);
     z-index: -1;
   }
@@ -806,7 +805,6 @@
     -o-object-fit: cover;
     object-fit: cover;
     border-radius: 24px;
-    overflow: visible;
   }
   .trn-about .second-screen {
     position: relative;
@@ -818,10 +816,10 @@
   }
   .trn-about .second-screen::after {
     display: block;
-    content: url("/img/icon/minisnake.svg");
+    content: url("../img/icon/minisnake.svg");
     position: absolute;
     top: 150px;
-    left: 80px;
+    left: -28px;
     z-index: -1;
   }
   .trn-about .second-screen .objective {
@@ -974,7 +972,7 @@
   }
   .trn-about .fourth-screen::before {
     display: block;
-    content: url("/img/icon/minisnake.svg");
+    content: url("../img/icon/minisnake.svg");
     position: absolute;
     bottom: 90px;
     right: 0;
@@ -982,7 +980,7 @@
   }
   .trn-about .fourth-screen::after {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     bottom: -50px;
     left: -140px;
@@ -1153,10 +1151,10 @@
   }
   footer .form::after {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     top: -160px;
-    right: -64px;
+    right: 0px;
     transform: rotate(-87deg);
     z-index: -1;
   }
@@ -1227,7 +1225,7 @@
     z-index: 1;
   }
   .trn-about .first-screen .left .h3 {
-    left: 20px;
+    left: 36px;
     font-size: 24px;
     color: #fff;
   }
@@ -1242,7 +1240,7 @@
   }
   .trn-about .first-screen .right {
     position: relative;
-    width: 100%;
+    width: 92%;
   }
   .trn-about .first-screen .right::before {
     position: absolute;
@@ -1296,7 +1294,6 @@
     -o-object-fit: cover;
     object-fit: cover;
     border-radius: 24px;
-    overflow: visible;
   }
   .trn-about .second-screen {
     position: relative;
@@ -1308,10 +1305,10 @@
   }
   .trn-about .second-screen::after {
     display: block;
-    content: url("/img/icon/minisnake.svg");
+    content: url("../img/icon/minisnake.svg");
     position: absolute;
     top: 150px;
-    left: 80px;
+    left: -480px;
     z-index: -1;
   }
   .trn-about .second-screen .objective {
@@ -1460,7 +1457,7 @@
   }
   .trn-about .fourth-screen::before {
     display: block;
-    content: url("/img/icon/minisnake.svg");
+    content: url("../img/icon/minisnake.svg");
     position: absolute;
     bottom: 90px;
     right: 0;
@@ -1468,7 +1465,7 @@
   }
   .trn-about .fourth-screen::after {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     bottom: -50px;
     left: -140px;
