--- a/css/about.scss
+++ b/css/about.scss
@@ -146,7 +146,6 @@
           -o-object-fit: cover;
           object-fit: cover;
           border-radius: 24px;
-          overflow: visible;
         }
       }
     }
@@ -157,7 +156,7 @@
 
       &::after {
         display: block;
-        content: url("/img/icon/minisnake.svg");
+        content: url("../img/icon/minisnake.svg");
         position: absolute;
         top: 150px;
         left: 80px;
@@ -258,7 +257,7 @@
 
       &::before {
         display: block;
-        content: url("/img/icon/potato.svg");
+        content: url("../img/icon/potato.svg");
         position: absolute;
         top: 0;
         right: 0;
@@ -358,7 +357,7 @@
 
       &::before {
         display: block;
-        content: url("/img/icon/minisnake.svg");
+        content: url("../img/icon/minisnake.svg");
         position: absolute;
         bottom: 90px;
         right: 0;
@@ -367,7 +366,7 @@
 
       &::after {
         display: block;
-        content: url("/img/icon/potato.svg");
+        content: url("../img/icon/potato.svg");
         position: absolute;
         bottom: -50px;
         left: -140px;
@@ -573,10 +572,10 @@
 
       &::after {
         display: block;
-        content: url("/img/icon/potato.svg");
+        content: url("../img/icon/potato.svg");
         position: absolute;
         top: -160px;
-        right: -64px;
+        right: 0;
         transform: rotate(-87deg);
         z-index: -1;
       }
@@ -740,7 +739,6 @@
           -o-object-fit: cover;
           object-fit: cover;
           border-radius: 24px;
-          overflow: visible;
         }
       }
     }
@@ -756,10 +754,10 @@
 
       &::after {
         display: block;
-        content: url("/img/icon/minisnake.svg");
+        content: url("../img/icon/minisnake.svg");
         position: absolute;
         top: 150px;
-        left: 80px;
+        left: -28px;
         z-index: -1;
       }
 
@@ -944,7 +942,7 @@
 
       &::before {
         display: block;
-        content: url("/img/icon/minisnake.svg");
+        content: url("../img/icon/minisnake.svg");
         position: absolute;
         bottom: 90px;
         right: 0;
@@ -953,7 +951,7 @@
 
       &::after {
         display: block;
-        content: url("/img/icon/potato.svg");
+        content: url("../img/icon/potato.svg");
         position: absolute;
         bottom: -50px;
         left: -140px;
@@ -1155,10 +1153,10 @@
 
       &::after {
         display: block;
-        content: url("/img/icon/potato.svg");
+        content: url("../img/icon/potato.svg");
         position: absolute;
         top: -160px;
-        right: -64px;
+        right: 0px;
         transform: rotate(-87deg);
         z-index: -1;
       }
@@ -1250,7 +1248,7 @@
         transform: translateY(-75px);
         z-index: 1;
         .h3 {
-          left: 20px;
+          left: 36px;
           font-size: 24px;
           color: #fff;
         }
@@ -1268,7 +1266,7 @@
 
       .right {
         position: relative;
-        width: 100%;
+        width: 92%;
 
         &::before {
           position: absolute;
@@ -1327,7 +1325,6 @@
           -o-object-fit: cover;
           object-fit: cover;
           border-radius: 24px;
-          overflow: visible;
         }
       }
     }
@@ -1343,10 +1340,10 @@
 
       &::after {
         display: block;
-        content: url("/img/icon/minisnake.svg");
+        content: url("../img/icon/minisnake.svg");
         position: absolute;
         top: 150px;
-        left: 80px;
+        left: -480px;
         z-index: -1;
       }
 
@@ -1524,7 +1521,7 @@
 
       &::before {
         display: block;
-        content: url("/img/icon/minisnake.svg");
+        content: url("../img/icon/minisnake.svg");
         position: absolute;
         bottom: 90px;
         right: 0;
@@ -1533,7 +1530,7 @@
 
       &::after {
         display: block;
-        content: url("/img/icon/potato.svg");
+        content: url("../img/icon/potato.svg");
         position: absolute;
         bottom: -50px;
         left: -140px;
