--- a/css/components/menu.scss
+++ b/css/components/menu.scss
@@ -67,7 +67,7 @@ header {
             right: -20px;
             width: 12px;
             height: 6px;
-            background-image: url(../../img/icon/menu-arr.svg);
+            background-image: url("./img/icon/menu-arr.svg");
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
@@ -189,7 +189,7 @@ header {
           right: 0;
           width: 12px;
           height: 6px;
-          background-image: url("./img/icon/menu-arr.svg");
+          background-image: url("../../img/icon/menu-arr.svg");
           background-repeat: no-repeat;
           transform: translateY(-50%);
           transition: transform $transition;
