--- a/css/components/menu.scss
+++ b/css/components/menu.scss
@@ -350,6 +350,7 @@ header {
         }
 
         &.active {
+          display: block;
           > a .arrow {
             transform: rotate(90deg);
           }
