--- a/css/about.css
+++ b/css/about.css
@@ -819,7 +819,7 @@
     content: url("../img/icon/minisnake.svg");
     position: absolute;
     top: 150px;
-    left: -28px;
+    right: 12px;
     z-index: -1;
   }
   .trn-about .second-screen .objective {
@@ -974,7 +974,7 @@
     display: block;
     content: url("../img/icon/minisnake.svg");
     position: absolute;
-    bottom: 90px;
+    bottom: -990px;
     right: 0;
     z-index: -1;
   }
@@ -1098,8 +1098,6 @@
   .trn-about .fifth-screen .our-partners-items {
     color: var(--Text-heads-black, #222);
     font-family: "Noto Sans";
-    -moz-column-gap: 20px;
-         column-gap: 20px;
   }
   .trn-about .fifth-screen .our-partners-items .our-partners-item {
     display: grid;
