--- a/css/about.scss
+++ b/css/about.scss
@@ -757,7 +757,7 @@
         content: url("../img/icon/minisnake.svg");
         position: absolute;
         top: 150px;
-        left: -28px;
+        right: 12px;
         z-index: -1;
       }
 
@@ -944,7 +944,7 @@
         display: block;
         content: url("../img/icon/minisnake.svg");
         position: absolute;
-        bottom: 90px;
+        bottom: -990px;
         right: 0;
         z-index: -1;
       }
@@ -1089,7 +1089,6 @@
         &-items {
           color: var(--Text-heads-black, #222);
           font-family: "Noto Sans";
-          column-gap: 20px;
 
           .our-partners-item {
             display: grid;
