--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -325,6 +325,9 @@ footer .footer .container .column:last-child .soc_media a {
   }
 }
 @media (min-width: 761px) and (max-width: 1295px) {
+  footer {
+    align-items: center;
+  }
   footer .form {
     width: calc(100% - 140px);
     padding: 40px;
@@ -387,7 +390,6 @@ footer .footer .container .column:last-child .soc_media a {
 }
 @media (min-width: 390px) and (max-width: 760px) {
   footer {
-    padding: 0 30px;
     gap: 64px;
   }
   footer .form {
