--- a/css/about.scss
+++ b/css/about.scss
@@ -1250,6 +1250,7 @@
           left: 36px;
           font-size: 24px;
           color: #fff;
+          margin-bottom: 20px;
         }
 
         p {
