--- a/css/components/checkbox.css
+++ b/css/components/checkbox.css
@@ -42,7 +42,7 @@ input[type=checkbox].yellow-checkbox:checked::after {
   top: 0;
   left: 0;
   border: 1px solid var(--Bg-primary-lime, #d7db2d);
-  background-image: url(../img/icon/white-check.svg);
+  background-image: url("./img/icon/white-check.svg");
   background-color: var(--Bg-primary-lime, #d7db2d);
   background-position: 4px 5px;
   background-repeat: no-repeat;
