--- a/styles.css
+++ b/styles.css
@@ -2,193 +2,193 @@
   font-family: Mulish;
   font-weight: 200;
   font-style: normal;
-  src: url(../fonts/Mulish/Mulish-ExtraLight.ttf);
+  src: url(./fonts/Mulish/Mulish-ExtraLight.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 200;
   font-style: italic;
-  src: url(../fonts/Mulish/Mulish-ExtraLightItalic.ttf);
+  src: url(./fonts/Mulish/Mulish-ExtraLightItalic.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 300;
   font-style: normal;
-  src: url(../fonts/Mulish/Mulish-Light.ttf);
+  src: url(./fonts/Mulish/Mulish-Light.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 300;
   font-style: italic;
-  src: url(../fonts/Mulish/Mulish-LightItalic.ttf);
+  src: url(./fonts/Mulish/Mulish-LightItalic.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 400;
   font-style: normal;
-  src: url(../fonts/Mulish/Mulish-Regular.ttf);
+  src: url(./fonts/Mulish/Mulish-Regular.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 400;
   font-style: italic;
-  src: url(../fonts/Mulish/Mulish-Italic.ttf);
+  src: url(./fonts/Mulish/Mulish-Italic.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 500;
   font-style: normal;
-  src: url(../fonts/Mulish/Mulish-Medium.ttf);
+  src: url(./fonts/Mulish/Mulish-Medium.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 500;
   font-style: italic;
-  src: url(../fonts/Mulish/Mulish-MediumItalic.ttf);
+  src: url(./fonts/Mulish/Mulish-MediumItalic.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 600;
   font-style: normal;
-  src: url(../fonts/Mulish/Mulish-SemiBold.ttf);
+  src: url(./fonts/Mulish/Mulish-SemiBold.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 600;
   font-style: italic;
-  src: url(../fonts/Mulish/Mulish-SemiBoldItalic.ttf);
+  src: url(./fonts/Mulish/Mulish-SemiBoldItalic.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 700;
   font-style: normal;
-  src: url(../fonts/Mulish/Mulish-Bold.ttf);
+  src: url(./fonts/Mulish/Mulish-Bold.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 700;
   font-style: italic;
-  src: url(../fonts/Mulish/Mulish-BoldItalic.ttf);
+  src: url(./fonts/Mulish/Mulish-BoldItalic.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 800;
   font-style: normal;
-  src: url(../fonts/Mulish/Mulish-ExtraBold.ttf);
+  src: url(./fonts/Mulish/Mulish-ExtraBold.ttf);
 }
 @font-face {
   font-family: Mulish;
   font-weight: 800;
   font-style: italic;
-  src: url(../fonts/Mulish/Mulish-ExtraBoldItalic.ttf);
+  src: url(./fonts/Mulish/Mulish-ExtraBoldItalic.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 100;
   font-style: normal;
-  src: url(../fonts/Noto_Sans/NotoSans-Thin.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-Thin.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 100;
   font-style: italic;
-  src: url(../fonts/Noto_Sans/NotoSans-ThinItalic.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-ThinItalic.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 200;
   font-style: normal;
-  src: url(../fonts/Noto_Sans/NotoSans-ExtraLight.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-ExtraLight.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 200;
   font-style: italic;
-  src: url(../fonts/Noto_Sans/NotoSans-ExtraLightItalic.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-ExtraLightItalic.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 300;
   font-style: normal;
-  src: url(../fonts/Noto_Sans/NotoSans-Light.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-Light.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 300;
   font-style: italic;
-  src: url(../fonts/Noto_Sans/NotoSans-LightItalic.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-LightItalic.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 400;
   font-style: normal;
-  src: url(../fonts/Noto_Sans/NotoSans-Regular.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-Regular.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 400;
   font-style: italic;
-  src: url(../fonts/Noto_Sans/NotoSans-Italic.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-Italic.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 500;
   font-style: normal;
-  src: url(../fonts/Noto_Sans/NotoSans-Medium.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-Medium.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 500;
   font-style: italic;
-  src: url(../fonts/Noto_Sans/NotoSans-MediumItalic.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-MediumItalic.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 600;
   font-style: normal;
-  src: url(../fonts/Noto_Sans/NotoSans-SemiBold.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-SemiBold.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 600;
   font-style: italic;
-  src: url(../fonts/Noto_Sans/NotoSans-SemiBoldItalic.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-SemiBoldItalic.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 700;
   font-style: normal;
-  src: url(../fonts/Noto_Sans/NotoSans-Bold.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-Bold.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 700;
   font-style: italic;
-  src: url(../fonts/Noto_Sans/NotoSans-BoldItalic.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-BoldItalic.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 800;
   font-style: normal;
-  src: url(../fonts/Noto_Sans/NotoSans-ExtraBold.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-ExtraBold.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 800;
   font-style: italic;
-  src: url(../fonts/Noto_Sans/NotoSans-ExtraBoldItalic.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-ExtraBoldItalic.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 900;
   font-style: normal;
-  src: url(../fonts/Noto_Sans/NotoSans-Black.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-Black.ttf);
 }
 @font-face {
   font-family: Noto Sans;
   font-weight: 900;
   font-style: italic;
-  src: url(../fonts/Noto_Sans/NotoSans-BlackItalic.ttf);
+  src: url(./fonts/Noto_Sans/NotoSans-BlackItalic.ttf);
 }
 * {
   padding: 0;
