--- a/css/entrepreneurs.css
+++ b/css/entrepreneurs.css
@@ -189,7 +189,7 @@
   }
   .trn-entrepreneurs .experience-wrapper::before {
     display: block;
-    content: url("/img/entrepreneurs/snake.svg");
+    content: url("../img/entrepreneurs/snake.svg");
     position: absolute;
     bottom: -400px;
     right: 250px;
@@ -197,7 +197,7 @@
   }
   .trn-entrepreneurs .experience-wrapper::after {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     bottom: -200px;
     left: -128px;
@@ -260,7 +260,7 @@
   }
   .trn-entrepreneurs div.guides div .guides-wrapper::after {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     bottom: -300px;
     right: -150px;
@@ -280,7 +280,7 @@
   }
   .trn-entrepreneurs .consult-wrapper::after {
     display: block;
-    content: url("/img/icon/minisnake.svg");
+    content: url("../img/icon/minisnake.svg");
     position: absolute;
     bottom: -250px;
     right: 0;
@@ -331,7 +331,7 @@
     width: 398px;
     height: 183px;
     z-index: 0;
-    background-image: url("/img/entrepreneurs/dog-2-elem.png");
+    background-image: url("../img/entrepreneurs/dog-2-elem.png");
   }
   .trn-entrepreneurs .consult-item-title {
     position: absolute;
@@ -367,13 +367,13 @@
     background: var(--Bg-primary-lime, #d7db2d);
   }
   .trn-entrepreneurs .consult-item.accent::before {
-    background-image: url("/img/entrepreneurs/dog-3-elem.png");
+    background-image: url("../img/entrepreneurs/dog-3-elem.png");
   }
   .trn-entrepreneurs .consult-item.accent.black {
     background: var(--Bg-primary-black, #222);
   }
   .trn-entrepreneurs .consult-item.accent.black::before {
-    background-image: url("/img/entrepreneurs/dog-1-elem.png");
+    background-image: url("../img/entrepreneurs/dog-1-elem.png");
   }
   .trn-entrepreneurs .consult-item.accent.black .consult-item-title {
     color: #fff;
@@ -391,7 +391,7 @@
   }
   footer .form::after {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     bottom: -165px;
     left: 115px;
@@ -470,6 +470,8 @@
     position: relative;
     border-radius: 24px;
     overflow: hidden;
+    width: 380px;
+    height: 380px;
   }
   .trn-entrepreneurs .card-info {
     position: absolute;
@@ -503,7 +505,7 @@
     font-family: Noto Sans;
     font-weight: 500;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 18px;
   }
   .trn-entrepreneurs .card picture img {
     display: block;
@@ -519,6 +521,7 @@
     grid-column-gap: 24px;
     grid-row-gap: 24px;
     margin-bottom: 36px;
+    justify-items: center;
   }
   .trn-entrepreneurs .cards-all-link {
     display: flex;
@@ -609,7 +612,7 @@
   }
   .trn-entrepreneurs .experience-wrapper::before {
     display: block;
-    content: url("/img/entrepreneurs/snake.svg");
+    content: url("../img/entrepreneurs/snake.svg");
     position: absolute;
     bottom: -400px;
     right: 250px;
@@ -617,7 +620,7 @@
   }
   .trn-entrepreneurs .experience-wrapper::after {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     bottom: -200px;
     left: -128px;
@@ -684,7 +687,7 @@
   }
   .trn-entrepreneurs .consult-wrapper::after {
     display: block;
-    content: url("/img/icon/minisnake.svg");
+    content: url("../img/icon/minisnake.svg");
     position: absolute;
     bottom: -250px;
     right: 0;
@@ -735,7 +738,7 @@
     width: 398px;
     height: 183px;
     z-index: 0;
-    background-image: url("/img/entrepreneurs/dog-2-elem.png");
+    background-image: url("../img/entrepreneurs/dog-2-elem.png");
   }
   .trn-entrepreneurs .consult-item-title {
     position: absolute;
@@ -771,13 +774,13 @@
     background: var(--Bg-primary-lime, #d7db2d);
   }
   .trn-entrepreneurs .consult-item.accent::before {
-    background-image: url("/img/entrepreneurs/dog-3-elem.png");
+    background-image: url("../img/entrepreneurs/dog-3-elem.png");
   }
   .trn-entrepreneurs .consult-item.accent.black {
     background: var(--Bg-primary-black, #222);
   }
   .trn-entrepreneurs .consult-item.accent.black::before {
-    background-image: url("/img/entrepreneurs/dog-1-elem.png");
+    background-image: url("../img/entrepreneurs/dog-1-elem.png");
   }
   .trn-entrepreneurs .consult-item.accent.black .consult-item-title {
     color: #fff;
@@ -797,7 +800,7 @@
   }
   footer .form::after {
     display: block;
-    content: url("/img/icon/potato.svg");
+    content: url("../img/icon/potato.svg");
     position: absolute;
     bottom: -165px;
     left: 115px;
@@ -880,7 +883,6 @@
     left: 16px;
     bottom: 16px;
     right: 16px;
-    top: 171px;
     display: flex;
     padding: 12px 16px 0;
     flex-direction: column;
@@ -909,6 +911,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 20px;
+    padding-bottom: 20px;
   }
   .trn-entrepreneurs .card picture img {
     display: block;
