--- a/css/entrepreneurs.scss
+++ b/css/entrepreneurs.scss
@@ -228,7 +228,7 @@
 
         &::before {
           display: block;
-          content: url("/img/entrepreneurs/snake.svg");
+          content: url("../img/entrepreneurs/snake.svg");
           position: absolute;
           bottom: -400px;
           right: 250px;
@@ -237,7 +237,7 @@
 
         &::after {
           display: block;
-          content: url("/img/icon/potato.svg");
+          content: url("../img/icon/potato.svg");
           position: absolute;
           bottom: -200px;
           left: -128px;
@@ -309,7 +309,7 @@
 
               &::after {
                 display: block;
-                content: url("/img/icon/potato.svg");
+                content: url("../img/icon/potato.svg");
                 position: absolute;
                 bottom: -300px;
                 right: -150px;
@@ -335,7 +335,7 @@
 
         &::after {
           display: block;
-          content: url("/img/icon/minisnake.svg");
+          content: url("../img/icon/minisnake.svg");
           position: absolute;
           bottom: -250px;
           right: 0;
@@ -391,7 +391,7 @@
           width: 398px;
           height: 183px;
           z-index: 0;
-          background-image: url("/img/entrepreneurs/dog-2-elem.png");
+          background-image: url("../img/entrepreneurs/dog-2-elem.png");
         }
 
         &-title {
@@ -430,14 +430,14 @@
           background: var(--Bg-primary-lime, #d7db2d);
 
           &::before {
-            background-image: url("/img/entrepreneurs/dog-3-elem.png");
+            background-image: url("../img/entrepreneurs/dog-3-elem.png");
           }
 
           &.black {
             background: var(--Bg-primary-black, #222);
 
             &::before {
-              background-image: url("/img/entrepreneurs/dog-1-elem.png");
+              background-image: url("../img/entrepreneurs/dog-1-elem.png");
             }
 
             .consult-item-title {
@@ -464,7 +464,7 @@
 
       &::after {
         display: block;
-        content: url("/img/icon/potato.svg");
+        content: url("../img/icon/potato.svg");
         position: absolute;
         bottom: -165px;
         left: 115px;
@@ -568,6 +568,8 @@
       position: relative;
       border-radius: 24px;
       overflow: hidden;
+      width: 380px;
+      height: 380px;
 
       &-info {
         position: absolute;
@@ -601,7 +603,7 @@
           font-family: Noto Sans;
           font-weight: 500;
           font-size: 16px;
-          line-height: 20px;
+          line-height: 18px;
         }
       }
 
@@ -621,6 +623,7 @@
         grid-column-gap: 24px;
         grid-row-gap: 24px;
         margin-bottom: 36px;
+        justify-items: center;
 
         &-all-link {
           display: flex;
@@ -726,7 +729,7 @@
 
         &::before {
           display: block;
-          content: url("/img/entrepreneurs/snake.svg");
+          content: url("../img/entrepreneurs/snake.svg");
           position: absolute;
           bottom: -400px;
           right: 250px;
@@ -735,7 +738,7 @@
 
         &::after {
           display: block;
-          content: url("/img/icon/potato.svg");
+          content: url("../img/icon/potato.svg");
           position: absolute;
           bottom: -200px;
           left: -128px;
@@ -812,7 +815,7 @@
 
         &::after {
           display: block;
-          content: url("/img/icon/minisnake.svg");
+          content: url("../img/icon/minisnake.svg");
           position: absolute;
           bottom: -250px;
           right: 0;
@@ -869,7 +872,7 @@
           width: 398px;
           height: 183px;
           z-index: 0;
-          background-image: url("/img/entrepreneurs/dog-2-elem.png");
+          background-image: url("../img/entrepreneurs/dog-2-elem.png");
         }
 
         &-title {
@@ -908,14 +911,14 @@
           background: var(--Bg-primary-lime, #d7db2d);
 
           &::before {
-            background-image: url("/img/entrepreneurs/dog-3-elem.png");
+            background-image: url("../img/entrepreneurs/dog-3-elem.png");
           }
 
           &.black {
             background: var(--Bg-primary-black, #222);
 
             &::before {
-              background-image: url("/img/entrepreneurs/dog-1-elem.png");
+              background-image: url("../img/entrepreneurs/dog-1-elem.png");
             }
 
             .consult-item-title {
@@ -946,7 +949,7 @@
 
       &::after {
         display: block;
-        content: url("/img/icon/potato.svg");
+        content: url("../img/icon/potato.svg");
         position: absolute;
         bottom: -165px;
         left: 115px;
@@ -1054,7 +1057,6 @@
         left: 16px;
         bottom: 16px;
         right: 16px;
-        top: 171px;
         display: flex;
 
         padding: 12px 16px 0;
@@ -1083,6 +1085,7 @@
           font-weight: 500;
           font-size: 14px;
           line-height: 20px;
+          padding-bottom: 20px;
         }
       }
 
